src/main/java/com/example/formservice/handler/error/exception/ResourceNotFoundException.java
package com.example.formservice.handler.error.exception;

public class ResourceNotFoundException extends RuntimeException {
    public ResourceNotFoundException(String message) {
        super(message);
    }
}
